Backend cleanup. Included GitHub profile pic in dashboard.